test/sema/struct_decl_shadowed.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {}
extern fn printf(fmt:*u8, ...) -> i32; fn println(n:i32) -> void {printf(&"%d\n", n);}
fn main() -> void {
    const S = 1;
    // CHECK: [[# @LINE - 1 ]]:11: error: redeclaration of 'S'
    let x: S;

    println(S);
}